Closed Bug 15486 Opened 25 years ago Closed

Return and translate nsFileSpec errors

Categories

(Core Graveyard :: Installer: XPInstall Engine, defect, P3)

defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: samir_bugzilla, Assigned: samir_bugzilla)

Details

Need to capture errors return when calling nsFileSpec operations. If the errors fall out of our range we need to translate them.
Status: NEW → ASSIGNED
Target Milestone: M11
This refers to the Install.File*() operations.
Fix checked in.
Status: RESOLVED → VERIFIED
Samir assures me we're translating. Lower level stuff...again.
Bulk move of XPInstall (component to be deleted) bugs to Installer: XPInstall Engine
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.