Added Mac alias creation feature for install script writers using XPInstall: bugs 9363, 14345, 15503; r=ssu.Fixed nsFileSpec<->nsInstall error translation in File operations exposed to install script writers: bug 15486; r=ssu.